[package]
name = "error-code"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.22.1"
error-code-derive = { workspace = true }

[dev-dependencies]
thiserror = { workspace = true }
http = { workspace = true }
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = { workspace = true }
backtrace = "0.3.74"
base64 = "0.22.1"
